--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-ssl-pinning": "^1.5.7",
     "react-native-ssl-public-key-pinning": "^1.1.3",
     "react-native-uuid": "^2.0.1",
